@@ -2,5 +2,6 @@
 *.exe
 *.xml
 generated-stamp
+gapi-codegen
 Makefile
 
