@@ -1,0 +1,2 @@
+#!/bin/sh
+@MONO@ @prefix@/bin/gapi_codegen.exe "$@"
