@@ -1,4 +1,5 @@
 Makefile
 gapi_format_xml
+gapi-fixup
 *.pc
 
