@@ -1,5 +1,5 @@
 atk-1.2.4
-gstreamer-0.4.2
+gstreamer-0.6.4
 gtk+-2.2.2
 gtkhtml-3.0.8
 libart_lgpl-2.3.10
