@@ -1,3 +1,14 @@
+2003-11-07  Mike Kestner  <mkestner@ximian.com>
+
+	* configure.in : add mono check.  expand wrapper scripts
+	* generator/Makefile.in : use install. install a gapi-codegen wrapper.
+	* generator/SymbolTable.cs : add SimpleGen for short
+	* generator/gapi-codegen.in : new wrapper script in file.
+	* parser/Makefile.in : use install. install a gapi-fixup wrapper.
+	* generator/gapi-fixup.in : new wrapper script in file.
+	* parser/gapi2xml.pl : deal with non-namespaced enums. ignore
+	forward struct declarations.
+	
 2003-11-05  Mike Kestner  <mkestner@ximian.com>
 
 	* gtk/ITreeNode.cs : make Parent readonly
